--- a/wp-content/themes/n1_durable_goods/assets/src/scss/modules/_module-subscribe.scss
+++ b/wp-content/themes/n1_durable_goods/assets/src/scss/modules/_module-subscribe.scss
@@ -1,6 +1,14 @@
 .module-subscribe {
     --sub-bg: #ffffff4c;
 
+    a:not(.button) {
+        text-decoration: underline;
+        font-size: .9rem;
+        &:hover {
+            color: var(--white);
+        }
+    }
+
     p {
         font-size: clamp(1.2rem, 1.9vw, 1.7rem);
         line-height: 1.1;
